entity_macros/tests/ui/derive/ent/missing-type-for-edge-attr-with-other-attrs.stderr
error: Missing edge type
  --> $DIR/missing-type-for-edge-attr-with-other-attrs.rs:17:11
   |
17 |     #[ent(edge(shallow))]
   |           ^^^^
